--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "firebase": "^5.6.0",
+    "firebase": "^5.9.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.8",
     "recompose": "^0.30.0"
   },
   "scripts": {
